tests/programs/valid/StaticMethodExample.java
public class StaticMethodExample {
    public static void staticMethod() {
        System.out.println("This is a static method.");
    }
}
